--- a/website_files/board.html
+++ b/website_files/board.html
@@ -92,11 +92,10 @@
       <h1>Board of Directors</h1>
     </div>
     <div class="mainBody">
-
       <div class="d-flex justify-content-center my-5 board-image-container">
         <img
           class="img img-fluid"
-          src="./img/board-picture.jpg"
+          src="./img/Board_Picture_03_30_2023.jpeg"
           alt="Chateau Dijon Property Staff Picture"
         />
       </div>
@@ -108,14 +107,14 @@
               <span>
                 <img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
               </span>
-              Greg Bolden, President
+              Paula Rast, President
             </h4>
 
             <h4>
               <span>
                 <img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
               </span>
-              Paula Rast, Vice President
+              Vincent Di Blasi, Vice President
             </h4>
 
             <h4>
@@ -136,7 +135,7 @@
               <span>
                 <img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
               </span>
-              Vincent Di Blasi, Member At Large
+              Cathy Scales, Member At Large
             </h4>
           </div>
         </div>
@@ -172,7 +171,7 @@
             <ul class="list-unstyled text-small">
               <li><a class="text-muted" href="hoa.html">Owners Portal</a></li>
               <li>
-                <a class="text-muted" href="contractor.html">Contarctors</a>
+                <a class="text-muted" href="contractor.html">Contractor</a>
               </li>
               <li><a class="text-muted" href="media.html">Media</a></li>
             </ul>
