--- a/website_files/governing-documents.html
+++ b/website_files/governing-documents.html
@@ -97,7 +97,7 @@
         <ul class="hoaList">
           <li>
             <a
-              href="https://nebula.wsimg.com/0b6edf12f52eaf27bd391e26f63352fa?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
+              href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/2021-04-12%20Revised%20Rules%20Regulations%20(Filed).pdf?t=2023-03-21T02%3A05%3A25.791Z"
               target="_blank"
             >
               <h4>
@@ -110,7 +110,7 @@
           </li>
           <li>
             <a
-              href="https://nebula.wsimg.com/471a2e7c436c320483758ce10b174d81?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
+              href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/CD%20BYLAWS.pdf?t=2023-03-21T02%3A00%3A23.550Z"
               target="_blank"
             >
               <h4>
@@ -123,7 +123,7 @@
           </li>
           <li>
             <a
-              href="https://nebula.wsimg.com/f6378621971946bd842018a612f57f72?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
+              href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/2019-11-25%20Rules%20and%20Regulations-Patios%20Balconies%20Terraces%20(Filed).pdf?t=2023-03-21T02%3A07%3A53.874Z"
               target="_blank"
             >
               <h4>
@@ -136,7 +136,7 @@
           </li>
           <li>
             <a
-              href="https://nebula.wsimg.com/f5df6ba1680a324f36044595875a6c6b?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
+              href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/1979%20Recorded%20Declaration.pdf?t=2023-03-21T02%3A32%3A08.533Z"
               target="_blank"
             >
               <h4>
@@ -149,7 +149,7 @@
           </li>
           <li>
             <a
-              href="https://nebula.wsimg.com/19f722a4ca01f828ae5eccd468796e6e?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
+              href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/2020-01-16%20Fireplace%20Policy%20(Filed).pdf?t=2023-03-21T02%3A30%3A48.004Z"
               target="_blank"
             >
               <h4>
@@ -162,7 +162,7 @@
           </li>
           <li>
             <a
-              href="https://nebula.wsimg.com/b668c2e076772be9c8a2975d6d2f350e?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
+              href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/2020-10-13%20Notice%20of%20Filing-Doc.%20Retention%20&%20Records%20Production%20(Filed).pdf"
               target="_blank"
             >
               <h4>
@@ -175,7 +175,7 @@
           </li>
           <li>
             <a
-              href="https://nebula.wsimg.com/51ea7d76217bc971e47e8259175eca43?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
+              href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/Roll%20Down%20Awning%20Resolution_Signed.pdf?t=2023-03-21T02%3A27%3A57.456Z"
               target="_blank"
             >
               <h4>
@@ -188,7 +188,7 @@
           </li>
           <li>
             <a
-              href="https://nebula.wsimg.com/c5984633eed1936aca871a2e4b8618d6?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
+              href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/2021-09-13%20Pandemic_Policy_(Filed).pdf"
               target="_blank"
             >
               <h4>
@@ -201,7 +201,7 @@
           </li>
           <li>
             <a
-              href="https://nebula.wsimg.com/71ed760ddad6590855f9b8a6908a28fd?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
+              href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/2021-09-13%20Religious_Item_Policy_(Filed).pdf?t=2023-03-21T02%3A24%3A46.078Z"
               target="_blank"
             >
               <h4>
@@ -214,7 +214,7 @@
           </li>
           <li>
             <a
-              href="https://nebula.wsimg.com/78e1da5700795a50490c2b280e4e0b4e?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
+              href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/2021-12-13%20Notice%20of%20Filing%20-%20Dog%20Run%20%20Utility%20Line%20Policies%20(Filed).pdf"
               target="_blank"
             >
               <h4>
@@ -257,7 +257,7 @@
             <ul class="list-unstyled text-small">
               <li><a class="text-muted" href="hoa.html">Owners Portal</a></li>
               <li>
-                <a class="text-muted" href="contractor.html">Contarctors</a>
+                <a class="text-muted" href="contractor.html">Contractor</a>
               </li>
               <li><a class="text-muted" href="media.html">Media</a></li>
             </ul>
