--- a/website_files/location.html
+++ b/website_files/location.html
@@ -53,7 +53,9 @@
 
   <body>
     <header class="header" id="top">
-      <h1 class="writtenLogo"><a href="index.html">Chateau Dijon Townhomes</a></h1>
+      <h1 class="writtenLogo">
+        <a href="index.html">Chateau Dijon Townhomes</a>
+      </h1>
       <div class="nav-modal">
         <div class="menu"></div>
         <nav>
@@ -98,7 +100,7 @@
       <div class="row row1" id="locationImg1">
         <div class="col-sm-12 col-lg-4 p-0 imgHouse">
           <img
-            src="https://nebula.wsimg.com/e66b0eaa1e86b7ae0cd0ac05b6664136?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
+            src="./img/poolside.jpeg"
             alt=""
             class="img"
             id="poolSide"
@@ -121,7 +123,7 @@
       <div class="row row2">
         <div class="col-sm-12 col-lg-6 order-lg-2 imgHouse">
           <img
-            src="//nebula.wsimg.com/dfa6b519070ec546618eb14b84e47acd?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
+            src="./img/fountain.jpeg"
             alt=""
             class="img mr-5"
             id="fountain"
@@ -142,7 +144,7 @@
       <div class="row row3">
         <div class="col-sm-12 col-lg-5 imgHouse">
           <img
-            src="//nebula.wsimg.com/2d8632505d6932900b6b3e24e2246edc?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
+            src="./img/fronted.jpeg"
             alt=""
             class="img"
             id="fronted"
@@ -166,33 +168,35 @@
       <div id="map"></div>
     </div>
     <!-- Footer -->
-    <footer class=" my-md-5 pt-md-5 border-top">
+    <footer class="my-md-5 pt-md-5 border-top">
       <div class="row mb-5 d-flex mt-2">
-        <div class="col-12 col-md ">
+        <div class="col-12 col-md">
           <h2>Chateau Dijon Townhomes</h2>
         </div>
         <div class="col-6 col-md">
           <h4>Contact</h4>
-            <div>
-              <p class="text-muted">7711 Broadway Ste B22</p>
-              <p class="text-muted">San Antonio, TX 78209</p>
-              <p class="text-muted">Phone: (210) 824-6308</p> 
+          <div>
+            <p class="text-muted">7711 Broadway Ste B22</p>
+            <p class="text-muted">San Antonio, TX 78209</p>
+            <p class="text-muted">Phone: (210) 824-6308</p>
+          </div>
+          <div>
+            <p class="text-muted d-flex justify-content-start" id="hours">
+              Office Hours:
+            </p>
+            <div class="col d-flex text-left">
+              <ul class="list-unstyled text-muted">
+                <li>Mon -Fri 8AM–4PM</li>
+                <li>Sat & Sun Closed</li>
+              </ul>
             </div>
-              <div>
-                <p class="text-muted d-flex justify-content-start" id="hours">Office Hours:</p>
-                <div class="col d-flex text-left">
-                  <ul class="list-unstyled text-muted">
-                    <li>Mon -Fri	8AM–4PM</li>
-                    <li>Sat & Sun	Closed</li>
-                  </ul>
-                </div>
-              </div>
+          </div>
         </div>
         <div class="col-6 col-md">
           <h4>Resources</h4>
           <ul class="list-unstyled text-small">
             <li><a class="text-muted" href="hoa.html">Owners Portal</a></li>
-            <li><a class="text-muted" href="contractor.html">Contarctors</a></li>
+            <li><a class="text-muted" href="contractor.html">Contractor</a></li>
             <li><a class="text-muted" href="media.html">Media</a></li>
           </ul>
         </div>
@@ -207,8 +211,7 @@
       </div>
       <div class="powered-by text-center pt-5">
         <small>
-          &copy;2022 Chateau Dijon TownHomes - San Antonio, TX | Powered
-          by
+          &copy;2022 Chateau Dijon TownHomes - San Antonio, TX | Powered by
           <a href="http://rockdigital.agency" target="_blank">Rock Digital</a>
         </small>
       </div>
