--- a/website_files/staff.html
+++ b/website_files/staff.html
@@ -177,7 +177,7 @@
           <ul class="list-unstyled text-small">
             <li><a class="text-muted" href="hoa.html">Owners Portal</a></li>
             <li>
-              <a class="text-muted" href="contractor.html">Contarctors</a>
+              <a class="text-muted" href="contractor.html">Contractor</a>
             </li>
             <li><a class="text-muted" href="media.html">Media</a></li>
           </ul>
