--- a/website_files/2019Year-in-Review.html
+++ b/website_files/2019Year-in-Review.html
@@ -135,7 +135,7 @@
           <ul class="list-unstyled text-small">
             <li><a class="text-muted" href="hoa.html">Owners Portal</a></li>
             <li>
-              <a class="text-muted" href="contractor.html">Contarctors</a>
+              <a class="text-muted" href="contractor.html">Contractor</a>
             </li>
             <li><a class="text-muted" href="media.html">Media</a></li>
           </ul>
@@ -151,8 +151,7 @@
       </div>
       <div class="powered-by text-center pt-5">
         <small>
-          &copy;2022 Chateau Dijon TownHomes - San Antonio, TX | Powered
-          by
+          &copy;2022 Chateau Dijon TownHomes - San Antonio, TX | Powered by
           <a href="http://rockdigital.agency" target="_blank">Rock Digital</a>
         </small>
       </div>
