--- a/website_files/2020Year-in-Review.html
+++ b/website_files/2020Year-in-Review.html
@@ -99,7 +99,7 @@
             <h4>Resources</h4>
             <ul class="list-unstyled text-small">
               <li><a class="text-muted" href="hoa.html">Owners Portal</a></li>
-              <li><a class="text-muted" href="contractor.html">Contarctors</a></li>
+              <li><a class="text-muted" href="contractor.html">Contractor</a></li>
               <li><a class="text-muted" href="media.html">Media</a></li>
             </ul>
           </div>
