--- a/website_files/contractor.html
+++ b/website_files/contractor.html
@@ -45,7 +45,9 @@
 
   <body>
     <header class="header">
-      <h1 class="writtenLogo"><a href="index.html">Chateau Dijon Townhomes</a></h1>
+      <h1 class="writtenLogo">
+        <a href="index.html">Chateau Dijon Townhomes</a>
+      </h1>
       <div class="nav-modal">
         <div class="menu"></div>
         <nav>
@@ -91,50 +93,57 @@
     </div>
 
     <div class="d-flex justify-content-center my-5">
-      <img
-        class="img"
-        src="https://nebula.wsimg.com/d19997960d7d91eb220144fde559521f?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
-        alt="Chateau Dijon Contractors Information"
-      />
+      <a
+        href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/Contractor%20Reminders%202.17.2022_revised.pdf?t=2023-03-21T16%3A45%3A46.560Z"
+        target="_blank"
+      >
+        <img
+          class="embed"
+          src="./img/Contractor Reminders 2.17.2022_revised.png"
+          alt="Chateau Dijon Contractors Information"
+        />
+      </a>
     </div>
 
     <div class="d-flex justify-content-center pb-5">
       <a
-        href="https://nebula.wsimg.com/c59571525a9a8464f837e42d0f5c8606?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
+        href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/Contractor%20Reminders%202.17.2022_revised.pdf?t=2023-03-21T16%3A45%3A46.560Z"
         target="_blank"
         type="button"
         class="btn btn-warning btn-lg"
         >Contractor Info PDF</a
       >
     </div>
-     <!-- Footer -->
-     <footer class=" my-md-5 pt-md-5 border-top">
+    <!-- Footer -->
+    <footer class="my-md-5 pt-md-5 border-top">
       <div class="row mb-5 d-flex mt-2">
-        <div class="col-12 col-md ">
+        <div class="col-12 col-md">
           <h2>Chateau Dijon Townhomes</h2>
         </div>
         <div class="col-6 col-md">
           <h4>Contact</h4>
-            <div>
-              <p class="text-muted">7711 Broadway Ste B22</p>
-              <p class="text-muted">San Antonio, TX 78209</p>
-              <p class="text-muted">Phone: (210) 824-6308</p> 
+          <div>
+            <p class="text-muted">7711 Broadway Ste B22</p>
+            <p class="text-muted">San Antonio, TX 78209</p>
+            <p class="text-muted">Phone: (210) 824-6308</p>
+          </div>
+          <div>
+            <p class="text-muted d-flex justify-content-start" id="hours">
+              Office Hours:
+            </p>
+            <div class="col d-flex text-left">
+              <ul class="list-unstyled text-muted">
+                <li>Mon -Fri 8AM–4PM</li>
+                <li>Sat & Sun Closed</li>
+              </ul>
             </div>
-              <div>
-                <p class="text-muted d-flex justify-content-start" id="hours">Office Hours:</p>
-                <div class="col d-flex text-left">
-                  <ul class="list-unstyled text-muted">
-                    <li>Mon -Fri	8AM–4PM</li>
-                    <li>Sat & Sun	Closed</li>
-                  </ul>
-                </div>
-              </div>
+          </div>
         </div>
         <div class="col-6 col-md">
           <h4>Resources</h4>
           <ul class="list-unstyled text-small">
             <li><a class="text-muted" href="hoa.html">Owners Portal</a></li>
-            <li><a class="text-muted" href="contractor.html">Contarctors</a></li>
+            <li><a class="text-muted" href="contractor.html">Contractor</a></li>
             <li><a class="text-muted" href="media.html">Media</a></li>
           </ul>
         </div>
@@ -149,8 +158,7 @@
       </div>
       <div class="powered-by text-center pt-5">
         <small>
-          &copy;2022 Chateau Dijon TownHomes - San Antonio, TX | Powered
-          by
+          &copy;2022 Chateau Dijon TownHomes - San Antonio, TX | Powered by
           <a href="http://rockdigital.agency" target="_blank">Rock Digital</a>
         </small>
       </div>
