--- a/website_files/hoa.html
+++ b/website_files/hoa.html
@@ -45,7 +45,9 @@
 
   <body>
     <header class="header">
-      <h1 class="writtenLogo"><a href="index.html">Chateau Dijon Townhomes</a></h1>
+      <h1 class="writtenLogo">
+        <a href="index.html">Chateau Dijon Townhomes</a>
+      </h1>
       <div class="nav-modal">
         <div class="menu"></div>
         <nav>
@@ -95,7 +97,7 @@
         <ul class="hoaList owners">
           <li>
             <a
-              href="https://nebula.wsimg.com/555f2489c207893efb497c65bb32e591?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
+              href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/Application%20Alteration%20Form.pdf?t=2023-03-21T16%3A42%3A58.419Z"
               target="_blank"
             >
               <h4>
@@ -108,7 +110,7 @@
           </li>
           <li>
             <a
-              href="https://nebula.wsimg.com/6185ed21b7bdca7984db865e9f4b91be?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
+              href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/Vehicle%20Parking%20Registration_2023.pdf?t=2023-03-21T16%3A44%3A16.549Z"
               target="_blank"
             >
               <h4>
@@ -131,34 +133,38 @@
           </li>
         </ul>
       </div>
-       <!-- Footer -->
-       <footer class=" my-md-5 pt-md-5 border-top">
+      <!-- Footer -->
+      <footer class="my-md-5 pt-md-5 border-top">
         <div class="row mb-5 d-flex mt-2">
-          <div class="col-12 col-md ">
+          <div class="col-12 col-md">
             <h2>Chateau Dijon Townhomes</h2>
           </div>
           <div class="col-6 col-md">
             <h4>Contact</h4>
-              <div>
-                <p class="text-muted">7711 Broadway Ste B22</p>
-                <p class="text-muted">San Antonio, TX 78209</p>
-                <p class="text-muted">Phone: (210) 824-6308</p> 
+            <div>
+              <p class="text-muted">7711 Broadway Ste B22</p>
+              <p class="text-muted">San Antonio, TX 78209</p>
+              <p class="text-muted">Phone: (210) 824-6308</p>
+            </div>
+            <div>
+              <p class="text-muted d-flex justify-content-start" id="hours">
+                Office Hours:
+              </p>
+              <div class="col d-flex text-left">
+                <ul class="list-unstyled text-muted">
+                  <li>Mon -Fri 8AM–4PM</li>
+                  <li>Sat & Sun Closed</li>
+                </ul>
               </div>
-                <div>
-                  <p class="text-muted d-flex justify-content-start" id="hours">Office Hours:</p>
-                  <div class="col d-flex text-left">
-                    <ul class="list-unstyled text-muted">
-                      <li>Mon -Fri	8AM–4PM</li>
-                      <li>Sat & Sun	Closed</li>
-                    </ul>
-                  </div>
-                </div>
+            </div>
           </div>
           <div class="col-6 col-md">
             <h4>Resources</h4>
             <ul class="list-unstyled text-small">
               <li><a class="text-muted" href="hoa.html">Owners Portal</a></li>
-              <li><a class="text-muted" href="contractor.html">Contarctors</a></li>
+              <li>
+                <a class="text-muted" href="contractor.html">Contractor</a>
+              </li>
               <li><a class="text-muted" href="media.html">Media</a></li>
             </ul>
           </div>
@@ -173,8 +179,7 @@
         </div>
         <div class="powered-by text-center pt-5">
           <small>
-            &copy;2022 Chateau Dijon TownHomes - San Antonio, TX | Powered
-            by
+            &copy;2022 Chateau Dijon TownHomes - San Antonio, TX | Powered by
             <a href="http://rockdigital.agency" target="_blank">Rock Digital</a>
           </small>
         </div>
