--- a/website_files/index.html
+++ b/website_files/index.html
@@ -45,7 +45,9 @@
 
   <body>
     <header class="header">
-      <h1 class="writtenLogo"><a href="index.html">Chateau Dijon Townhomes</a></h1>
+      <h1 class="writtenLogo">
+        <a href="index.html">Chateau Dijon Townhomes</a>
+      </h1>
       <div class="nav-modal">
         <div class="menu"></div>
         <nav>
@@ -96,7 +98,7 @@
           <img
             id="flag"
             class="img"
-            src="https://nebula.wsimg.com/1d96a5ef1c66effcb5fd3fdee58fff03?AccessKeyId=C7018F589C4D922B4FA4&disposition=0&alloworigin=1"
+            src="./img/flag.jpeg"
             alt="CHateau Dijon Flag Pole"
           />
         </div>
@@ -143,33 +145,37 @@
         </div>
       </div>
       <!-- Footer -->
-      <footer class=" my-md-5 pt-md-5 border-top">
-        <div class="row mb-5 d-flex  mt-2">
-          <div class="col-12 col-md ">
+      <footer class="my-md-5 pt-md-5 border-top">
+        <div class="row mb-5 d-flex mt-2">
+          <div class="col-12 col-md">
             <h2>Chateau Dijon Townhomes</h2>
           </div>
           <div class="col-6 col-md">
             <h4>Contact</h4>
-              <div>
-                <p class="text-muted">7711 Broadway Ste B22</p>
-                <p class="text-muted">San Antonio, TX 78209</p>
-                <p class="text-muted">Phone: (210) 824-6308</p> 
+            <div>
+              <p class="text-muted">7711 Broadway Ste B22</p>
+              <p class="text-muted">San Antonio, TX 78209</p>
+              <p class="text-muted">Phone: (210) 824-6308</p>
+            </div>
+            <div>
+              <p class="text-muted d-flex justify-content-start" id="hours">
+                Office Hours:
+              </p>
+              <div class="col d-flex text-left">
+                <ul class="list-unstyled text-muted">
+                  <li>Mon -Fri 8AM–4PM</li>
+                  <li>Sat & Sun Closed</li>
+                </ul>
               </div>
-                <div>
-                  <p class="text-muted d-flex justify-content-start" id="hours">Office Hours:</p>
-                  <div class="col d-flex text-left">
-                    <ul class="list-unstyled text-muted">
-                      <li>Mon -Fri	8AM–4PM</li>
-                      <li>Sat & Sun	Closed</li>
-                    </ul>
-                  </div>
-                </div>
+            </div>
           </div>
           <div class="col-6 col-md">
             <h4>Resources</h4>
             <ul class="list-unstyled text-small">
               <li><a class="text-muted" href="hoa.html">Owners Portal</a></li>
-              <li><a class="text-muted" href="contractor.html">Contarctors</a></li>
+              <li>
+                <a class="text-muted" href="contractor.html">Contractor</a>
+              </li>
               <li><a class="text-muted" href="media.html">Media</a></li>
             </ul>
           </div>
@@ -184,8 +190,7 @@
         </div>
         <div class="powered-by text-center pt-5">
           <small>
-            &copy;2022 Chateau Dijon TownHomes - San Antonio, TX | Powered
-            by
+            &copy;2022 Chateau Dijon TownHomes - San Antonio, TX | Powered by
             <a href="http://rockdigital.agency" target="_blank">Rock Digital</a>
           </small>
         </div>
