Update: Add work order page to owners portal

--- a/website_files/hoa.html
+++ b/website_files/hoa.html
@@ -131,6 +131,16 @@
               </h4>
             </a>
           </li>
+          <li>
+            <a href="work-order.html">
+              <h4>
+                <span>
+                  <img src="img/fleur-de-lis-stencil.png" alt="" />
+                </span>
+                Submit A Work Order
+              </h4>
+            </a>
+          </li>
         </ul>
       </div>
       <!-- Footer -->
