--- a/website_files/work-order.html
+++ b/website_files/work-order.html
@@ -40,7 +40,7 @@
     <!-- Custom Stylesheets -->
     <link rel="stylesheet" href="styles.css" />
 
-    <title>Contact Us</title>
+    <title>Work Order</title>
   </head>
 
   <body>
@@ -89,24 +89,45 @@
     </section>
 
     <div class="pageTitle">
-      <h1>Contact Us</h1>
+      <h1>Submit A Work Order</h1>
     </div>
 
-    <div class="d-flex justify-content-center">
-      <p id="contactBlurb">
-        We are always ready to answer any questions or concerns you may have.
-        While we try to respond to all inquiries in a timely fashion, please
-        allow us 24 to 48 hours to address your email. Thank You!
+    <div class="d-flex flex-column align-items-center bolder">
+      <p>
+        The Association is excited to share our new electronic work order system with you.
       </p>
+      <p class="bolder"><strong>Starting <span class="underline">November 4, 2024,</span> owners will be able to place work orders online!</strong></p>
+      <p>The work orders are for repairs at your unit at <span class="underline">common areas/responsibilities</span> such as :</p>
+      <ul>
+        <li>screen repair & replacements</li>
+        <li>front door maintenance & repair</li>
+        <li>window maintenance & repair</li>
+        <li>glass sliding door maintenance & repair</li>
+        <li>patio fence maintenance & repair</li>
+        <li>outside siding maintenance & repair</li>
+      </ul>
+      <br />
+      <p id="contactBlurb">
+        <span class="underline">***Please continue to contact Maintenance directly at 210-464-5434 if you have an active leak! <br />
+        We will be able to react quickly and avoid possible damage to your unit and other areas.***</span>
+      </p>
+      <br />
+      <p>Here's how to place a work order online:</p>
+      <ol class="d-flex flex-column align-items-center">
+        <li>Click the yellow "Submit a Work Order" button below.</li>
+        <li>Fill out the required fields and submit the form.</li>
+        <li>We will notify you when the work order was accepted and completed.</li>
+      </ol>
     </div>
+    
 
     <div class="d-flex justify-content-center py-5">
       <a
-        href="mailto:propertymanager@chateau-dijon.com"
+        href="https://app.clickmaint.com/portal/23ae9c5c-a62b-4ad5-8fe8-1ab95c274547"
         target="_blank"
         type="button"
         class="btn btn-warning btn-lg"
-        ><i class="far fa-envelope"></i>&nbsp;Contact Us</a
+        >Submit a Work Order</a
       >
     </div>
 
