Update staff.html with new employees photo, Add Staff_Update_11042024.jpeg to /img

--- a/website_files/staff.html
+++ b/website_files/staff.html
@@ -95,7 +95,7 @@
     <div class="d-flex justify-content-center my-5 staff-image-container">
       <img
         class="img img-fluid"
-        src="./img/Staff_Update_2023.jpeg"
+        src="./img/Staff_Update_11042024.jpg"
         alt="Chateau Dijon Property Staff Picture"
       />
     </div>
@@ -142,7 +142,7 @@
             <span>
               <img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
             </span>
-            Joshua Quave - Maintenance
+            Joel StPierre - Landscaping
           </h4>
         </div>
       </div>
