Upadate: governing-documents.html

--- a/website_files/governing-documents.html
+++ b/website_files/governing-documents.html
@@ -255,6 +255,21 @@
 							</h4>
 						</a>
 					</li>
+          
+          <li>
+            <a
+              href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/(115558.00001)%20Chateau%20Dijon%20Townhomes%20Owners%20Assn%20-%20Emergency%20Resolution%20re%20Leasing%20of%20Units%20RECORDED%2011.26.2024%20(2).pdf?t=2024-11-26T18%3A02%3A19.971Z"
+              target="_blank"
+            >
+              <h4>
+                <span>
+                  <img src="img/fleur-de-lis-stencil.png" alt="" />
+                </span>
+                Leasing of Units Resolution
+              </h4>
+            </a>
+          </li>
+
 				</ul>
 			</div>
 			<!-- Footer -->
