update: Add individual board pics, remove old dead-links of review videos, add 2023 and 2024 year in review media to website, add new flyer pdf

--- a/website_files/hoa.html
+++ b/website_files/hoa.html
@@ -97,18 +97,31 @@
         <ul class="hoaList owners">
           <li>
             <a
-              href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/Application%20Alteration%20Form.pdf?t=2023-03-21T16%3A42%3A58.419Z"
-              target="_blank"
+            href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/Application%20Alteration%20Form.pdf?t=2023-03-21T16%3A42%3A58.419Z"
+            target="_blank"
             >
-              <h4>
-                <span>
-                  <img src="img/fleur-de-lis-stencil.png" alt="" />
-                </span>
-                Application for alteration of Unit
-              </h4>
-            </a>
-          </li>
-          <li>
+            <h4>
+              <span>
+                <img src="img/fleur-de-lis-stencil.png" alt="" />
+              </span>
+              Application for alteration of Unit
+            </h4>
+          </a>
+        </li>
+        <li>
+          <a
+            href="chateau-dijon-flyer.html"
+            target="_blank"
+          >
+            <h4>
+              <span>
+                <img src="img/fleur-de-lis-stencil.png" alt="" />
+              </span>
+              About Chateau Dijon
+            </h4>
+          </a>
+        </li>
+        <li>
             <a
               href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/Vehicle%20Parking%20Registration_2023.pdf?t=2023-03-21T16%3A44%3A16.549Z"
               target="_blank"
