--- a/website_files/board.html
+++ b/website_files/board.html
@@ -93,14 +93,109 @@
 		</div>
 		<div class="mainBody">
 			<div class="d-flex justify-content-center my-5 board-image-container">
-				<img
-					class="img img-fluid"
-					src="./img/board_2024_Alt.jpg"
-					alt="Chateau Dijon Property Staff Picture"
-				/>
+				<div
+					id="carouselExampleIndicators"
+					class="carousel slide"
+					data-ride="carousel"
+				>
+					<ol class="carousel-indicators">
+						<li
+							data-target="#carouselExampleIndicators"
+							data-slide-to="0"
+							class="active"
+						></li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+					</ol>
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img
+								class="d-block w-100"
+								src="./img/Laura Schneider_Board President.jpg"
+								alt="First slide"
+                />
+							<div class="carousel-caption d-none d-md-block">
+								<div class="board-name-bg">
+									<h4>Laura Schneider</h4>
+									<p>President</p>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-item ">
+							<img
+								class="d-block w-100"
+								src="./img/Dr. Seabrook Jones_Vice President.jpg"
+								alt="First slide"
+                />
+							<div class="carousel-caption d-none d-md-block">
+								<div class="board-name-bg">
+									<h4>Dr. Seabrook Jones</h4>
+									<p>Vice President</p>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-item ">
+							<img
+								class="d-block w-100"
+								src="./img/Dolores Villarreal_Treasurer.jpg"
+								alt="First slide"
+                />
+							<div class="carousel-caption d-none d-md-block">
+								<div class="board-name-bg">
+									<h4>Dolores Villarreal</h4>
+									<p>Treasurer</p>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-item ">
+							<img
+								class="d-block w-100"
+								src="./img/Trisha Cowley_Secretary.jpg"
+								alt="First slide"
+                />
+							<div class="carousel-caption d-none d-md-block">
+								<div class="board-name-bg">
+									<h4>Trisha Cowley</h4>
+									<p>Secretary</p>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-item ">
+							<img
+								class="d-block w-100"
+								src="./img/Joanie Brooks_Member at Large.jpg"
+								alt="First slide"
+                />
+							<div class="carousel-caption d-none d-md-block">
+								<div class="board-name-bg">
+									<h4>Joanie Brooks</h4>
+									<p>Member At Large</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<a
+						class="carousel-control-prev"
+						href="#carouselExampleIndicators"
+						role="button"
+						data-slide="prev"
+					>
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a
+						class="carousel-control-next"
+						href="#carouselExampleIndicators"
+						role="button"
+						data-slide="next"
+					>
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
+				</div>
 			</div>
 
-			<div class="d-flex justify-content-center">
+			<!-- <div class="d-flex justify-content-center">
 				<div class="row">
 					<div class="col members">
 						<h4>
@@ -139,7 +234,7 @@
 						</h4>
 					</div>
 				</div>
-			</div>
+			</div> -->
 
 			<!-- Footer -->
 			<footer class="my-md-5 pt-md-5 border-top">
