Update add single board pics not in carousel, outline complete

--- a/website_files/2023Year-in-Review.html
+++ b/website_files/2023Year-in-Review.html
@@ -93,7 +93,7 @@
 				<div class="auto-resize">
 					<div>
 						<iframe
-							src="https://www.youtube.com/embed/iI0x9cSIFZc?si=6-hRJs_GKubvreTk"
+							src="https://www.youtube.com/embed/neT2o4E_iNE?si=vviCVupHAsnO0cvg"
 							title="Chateau Dijon 2021 Year-in-Review"
 							frameborder="0"
 							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
