--- a/website_files/board.html
+++ b/website_files/board.html
@@ -39,6 +39,7 @@
 
 		<!-- Custom Stylesheets -->
 		<link rel="stylesheet" href="styles.css" />
+		<link rel="stylesheet" href="./styles/board.css" />
 
 		<title>Our Board</title>
 	</head>
@@ -93,148 +94,74 @@
 		</div>
 		<div class="mainBody">
 			<div class="d-flex justify-content-center my-5 board-image-container">
-				<div
-					id="carouselExampleIndicators"
-					class="carousel slide"
-					data-ride="carousel"
-				>
-					<ol class="carousel-indicators">
-						<li
-							data-target="#carouselExampleIndicators"
-							data-slide-to="0"
-							class="active"
-						></li>
-						<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-						<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-					</ol>
-					<div class="carousel-inner">
-						<div class="carousel-item active">
+				<div class="container">
+					<!-- First row with 2 members -->
+					<div class="row mb-4">
+						<div class="col-md-6 member text-center">
 							<img
-								class="d-block w-100"
+								class="d-block mx-auto w-100 pres"
 								src="./img/Laura Schneider_Board President.jpg"
-								alt="First slide"
-                />
-							<div class="carousel-caption d-none d-md-block">
-								<div class="board-name-bg">
-									<h4>Laura Schneider</h4>
-									<p>President</p>
-								</div>
+								alt="Laura Schneider - Board President"
+							/>
+							<div class="board-name-bg mt-2">
+								<h4>Laura Schneider</h4>
+								<p>President</p>
 							</div>
 						</div>
-						<div class="carousel-item ">
+
+						<div class="col-md-6 member text-center">
 							<img
-								class="d-block w-100"
+								class="d-block mx-auto w-100"
 								src="./img/Dr. Seabrook Jones_Vice President.jpg"
-								alt="First slide"
-                />
-							<div class="carousel-caption d-none d-md-block">
-								<div class="board-name-bg">
-									<h4>Dr. Seabrook Jones</h4>
-									<p>Vice President</p>
-								</div>
-							</div>
-						</div>
-						<div class="carousel-item ">
-							<img
-								class="d-block w-100"
-								src="./img/Dolores Villarreal_Treasurer.jpg"
-								alt="First slide"
-                />
-							<div class="carousel-caption d-none d-md-block">
-								<div class="board-name-bg">
-									<h4>Dolores Villarreal</h4>
-									<p>Treasurer</p>
-								</div>
-							</div>
-						</div>
-						<div class="carousel-item ">
-							<img
-								class="d-block w-100"
-								src="./img/Trisha Cowley_Secretary.jpg"
-								alt="First slide"
-                />
-							<div class="carousel-caption d-none d-md-block">
-								<div class="board-name-bg">
-									<h4>Trisha Cowley</h4>
-									<p>Secretary</p>
-								</div>
-							</div>
-						</div>
-						<div class="carousel-item ">
-							<img
-								class="d-block w-100"
-								src="./img/Joanie Brooks_Member at Large.jpg"
-								alt="First slide"
-                />
-							<div class="carousel-caption d-none d-md-block">
-								<div class="board-name-bg">
-									<h4>Joanie Brooks</h4>
-									<p>Member At Large</p>
-								</div>
+								alt="Dr. Seabrook Jones - Vice President"
+							/>
+							<div class="board-name-bg mt-2">
+								<h4>Dr. Seabrook Jones</h4>
+								<p>Vice President</p>
 							</div>
 						</div>
 					</div>
-					<a
-						class="carousel-control-prev"
-						href="#carouselExampleIndicators"
-						role="button"
-						data-slide="prev"
-					>
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a
-						class="carousel-control-next"
-						href="#carouselExampleIndicators"
-						role="button"
-						data-slide="next"
-					>
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
+
+					<!-- Second row with 3 members -->
+					<div class="row">
+						<div class="col-md-4 member text-center">
+							<img
+								class="d-block mx-auto w-100"
+								src="./img/Dolores Villarreal_Treasurer.jpg"
+								alt="Dolores Villarreal - Treasurer"
+							/>
+							<div class="board-name-bg mt-2">
+								<h4>Dolores Villarreal</h4>
+								<p>Treasurer</p>
+							</div>
+						</div>
+
+						<div class="col-md-4 member text-center">
+							<img
+								class="d-block mx-auto w-100 sec"
+								src="./img/Trisha Cowley_Secretary.jpg"
+								alt="Trisha Cowley - Secretary"
+							/>
+							<div class="board-name-bg mt-2">
+								<h4>Trisha Cowley</h4>
+								<p>Secretary</p>
+							</div>
+						</div>
+
+						<div class="col-md-4 member text-center">
+							<img
+								class="d-block mx-auto w-100"
+								src="./img/Joanie Brooks_Member at Large.jpg"
+								alt="Joanie Brooks - Member at Large"
+							/>
+							<div class="board-name-bg mt-2">
+								<h4>Joanie Brooks</h4>
+								<p>Member At Large</p>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
-
-			<!-- <div class="d-flex justify-content-center">
-				<div class="row">
-					<div class="col members">
-						<h4>
-							<span>
-								<img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
-							</span>
-							Laura Schneider, President
-						</h4>
-
-						<h4>
-							<span>
-								<img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
-							</span>
-							Ramiro DeLeon, Vice President
-						</h4>
-
-						<h4>
-							<span>
-								<img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
-							</span>
-							Dolores Villarreal, Treasurer
-						</h4>
-
-						<h4>
-							<span>
-								<img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
-							</span>
-							Joanie Brooks, Secretary
-						</h4>
-
-						<h4>
-							<span>
-								<img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
-							</span>
-							Diane Parma, Member At Large
-						</h4>
-					</div>
-				</div>
-			</div> -->
 
 			<!-- Footer -->
 			<footer class="my-md-5 pt-md-5 border-top">
@@ -314,3 +241,137 @@
 		<script src="js/index.js"></script>
 	</body>
 </html>
+
+<!-- Carousel -->
+<!-- <div class="carousel-inner">
+						<div class="carousel-item w-100 active">
+							<img
+								class="d-block w-100"
+								src="./img/Laura Schneider_Board President.jpg"
+								alt="First slide"
+                />
+							<div class="carousel-caption d-none d-md-block">
+								<div class="board-name-bg">
+									<h4>Laura Schneider</h4>
+									<p>President</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="carousel-item w-100">
+							<img
+								class="d-block w-100"
+								src="./img/Dr. Seabrook Jones_Vice President.jpg"
+								alt="First slide"
+                />
+							<div class="carousel-caption d-none d-md-block">
+								<div class="board-name-bg">
+									<h4>Dr. Seabrook Jones</h4>
+									<p>Vice President</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="carousel-item w-100">
+							<img
+								class="d-block w-100"
+								src="./img/Dolores Villarreal_Treasurer.jpg"
+								alt="First slide"
+                />
+							<div class="carousel-caption d-none d-md-block">
+								<div class="board-name-bg">
+									<h4>Dolores Villarreal</h4>
+									<p>Treasurer</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="carousel-item w-100">
+							<img
+								class="d-block w-100"
+								src="./img/Trisha Cowley_Secretary.jpg"
+								alt="First slide"
+                />
+							<div class="carousel-caption d-none d-md-block">
+								<div class="board-name-bg">
+									<h4>Trisha Cowley</h4>
+									<p>Secretary</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="carousel-item w-100">
+							<img
+								class="d-block w-100"
+								src="./img/Joanie Brooks_Member at Large.jpg"
+								alt="First slide"
+                />
+							<div class="carousel-caption d-none d-md-block">
+								<div class="board-name-bg">
+									<h4>Joanie Brooks</h4>
+									<p>Member At Large</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<a
+						class="carousel-control-prev"
+						href="#carouselExampleIndicators"
+						role="button"
+						data-slide="prev"
+					>
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a
+						class="carousel-control-next"
+						href="#carouselExampleIndicators"
+						role="button"
+						data-slide="next"
+					>
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
+				</div>
+			</div> -->
+
+<!-- <div class="d-flex justify-content-center">
+				<div class="row">
+					<div class="col members">
+						<h4>
+							<span>
+								<img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
+							</span>
+							Laura Schneider, President
+						</h4>
+
+						<h4>
+							<span>
+								<img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
+							</span>
+							Ramiro DeLeon, Vice President
+						</h4>
+
+						<h4>
+							<span>
+								<img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
+							</span>
+							Dolores Villarreal, Treasurer
+						</h4>
+
+						<h4>
+							<span>
+								<img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
+							</span>
+							Joanie Brooks, Secretary
+						</h4>
+
+						<h4>
+							<span>
+								<img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
+							</span>
+							Diane Parma, Member At Large
+						</h4>
+					</div>
+				</div>
+			</div> -->
