Update board of directors photos for all sizes

--- a/website_files/board.html
+++ b/website_files/board.html
@@ -97,7 +97,7 @@
 				<div class="container">
 					<!-- First row with 2 members -->
 					<div class="row mb-4">
-						<div class="col-md-6 member text-center">
+						<div class="col-lg-6 member text-center">
 							<img
 								class="d-block mx-auto w-100 pres"
 								src="./img/Laura Schneider_Board President.jpg"
@@ -109,7 +109,7 @@
 							</div>
 						</div>
 
-						<div class="col-md-6 member text-center">
+						<div class="col-lg-6 member text-center">
 							<img
 								class="d-block mx-auto w-100"
 								src="./img/Dr. Seabrook Jones_Vice President.jpg"
@@ -124,7 +124,7 @@
 
 					<!-- Second row with 3 members -->
 					<div class="row">
-						<div class="col-md-4 member text-center">
+						<div class="col-lg-4 member text-center">
 							<img
 								class="d-block mx-auto w-100"
 								src="./img/Dolores Villarreal_Treasurer.jpg"
@@ -136,7 +136,7 @@
 							</div>
 						</div>
 
-						<div class="col-md-4 member text-center">
+						<div class="col-lg-4 member text-center">
 							<img
 								class="d-block mx-auto w-100 sec"
 								src="./img/Trisha Cowley_Secretary.jpg"
@@ -148,7 +148,7 @@
 							</div>
 						</div>
 
-						<div class="col-md-4 member text-center">
+						<div class="col-lg-4 member text-center">
 							<img
 								class="d-block mx-auto w-100"
 								src="./img/Joanie Brooks_Member at Large.jpg"
@@ -166,10 +166,10 @@
 			<!-- Footer -->
 			<footer class="my-md-5 pt-md-5 border-top">
 				<div class="row mb-5 d-flex mt-2">
-					<div class="col-12 col-md">
+					<div class="col-12 col-lg">
 						<h2>Chateau Dijon Townhomes</h2>
 					</div>
-					<div class="col-6 col-md">
+					<div class="col-6 col-lg">
 						<h4>Contact</h4>
 						<div>
 							<p class="text-muted">7711 Broadway Ste B22</p>
@@ -188,7 +188,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-6 col-md">
+					<div class="col-6 col-lg">
 						<h4>Resources</h4>
 						<ul class="list-unstyled text-small">
 							<li><a class="text-muted" href="hoa.html">Owners Portal</a></li>
@@ -198,7 +198,7 @@
 							<li><a class="text-muted" href="media.html">Media</a></li>
 						</ul>
 					</div>
-					<div class="col-6 col-md">
+					<div class="col-6 col-lg">
 						<h4>About</h4>
 						<ul class="list-unstyled text-small">
 							<li><a class="text-muted" href="location.html">Location</a></li>
