update: add board email to page 1280px

--- a/website_files/board.html
+++ b/website_files/board.html
@@ -93,7 +93,7 @@
 			<h1>Board of Directors</h1>
 		</div>
 		<div class="mainBody">
-			<div class="d-flex justify-content-center my-5 board-image-container">
+			<div class="d-flex justify-content-center mb-5 board-image-container">
 				<div class="container">
 					<!-- First row with 2 members -->
 					<div class="row mb-4">
@@ -162,6 +162,9 @@
 					</div>
 				</div>
 			</div>
+      <div id="emailBoard">
+        <a href="mailto:board@chateau-dijon.com">Click Here To Email the Board</a>
+      </div>
 
 			<!-- Footer -->
 			<footer class="my-md-5 pt-md-5 border-top">
