Update: change title to chateau-dijon-flyer.html

--- a/website_files/chateau-dijon-flyer.html
+++ b/website_files/chateau-dijon-flyer.html
@@ -40,7 +40,7 @@
 		<!-- Custom Stylesheets -->
 		<link rel="stylesheet" href="styles.css" />
 
-		<title>2024 Year in Review</title>
+		<title>Chateau Dijon Work Order Flyer</title>
 	</head>
 
 	<body>
