Update: add newsletters.html, /newsletters/fall_2024 spring_2025 summer_2024 and summer_2025.html, add newsletters link to main menu

--- a/website_files/2023Year-in-Review.html
+++ b/website_files/2023Year-in-Review.html
@@ -59,6 +59,7 @@
 					<li><a href="contractor.html">Contractors</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
 					<li><a href="media.html">Media</a></li>
+          <li><a href="newsletters.html">Newsletters</a></li>
 				</nav>
 			</div>
 
