--- a/website_files/contractor.html
+++ b/website_files/contractor.html
@@ -51,15 +51,16 @@
       <div class="nav-modal">
         <div class="menu"></div>
         <nav>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="location.html#top">Location</a></li>
-          <li><a href="hoa.html">Owners Portal</a></li>
-          <li><a href="board.html">Board Members</a></li>
-          <li><a href="staff.html">Property Staff</a></li>
-          <li><a href="#">Contractors</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="media.html">Media</a></li>
-        </nav>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="location.html#top">Location</a></li>
+					<li><a href="hoa.html">Owners Portal</a></li>
+					<li><a href="board.html">Board Members</a></li>
+					<li><a href="staff.html">Property Staff</a></li>
+					<li><a href="contractor.html">Contractors</a></li>
+					<li><a href="contact.html">Contact Us</a></li>
+					<li><a href="media.html">Media</a></li>
+          <li><a href="newsletters.html">Newsletters</a></li>
+				</nav>
       </div>
 
       <div class="head">
