--- a/website_files/board.html
+++ b/website_files/board.html
@@ -55,11 +55,12 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="location.html#top">Location</a></li>
 					<li><a href="hoa.html">Owners Portal</a></li>
-					<li><a href="#">Board Members</a></li>
+					<li><a href="board.html">Board Members</a></li>
 					<li><a href="staff.html">Property Staff</a></li>
 					<li><a href="contractor.html">Contractors</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
 					<li><a href="media.html">Media</a></li>
+          <li><a href="newsletters.html">Newsletters</a></li>
 				</nav>
 			</div>
 
@@ -151,20 +152,22 @@
 						<div class="col-lg-4 member text-center">
 							<img
 								class="d-block mx-auto w-100"
-								src="./img/Joanie Brooks_Member at Large.jpg"
-								alt="Joanie Brooks - Member at Large"
+								src="./img/Kathleen Kramer.jpg"
+								alt="Kathleen Kramer - Member at Large"
 							/>
 							<div class="board-name-bg mt-2">
-								<h4>Joanie Brooks</h4>
+								<h4>Kathleen Kramer</h4>
 								<p>Member At Large</p>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-      <div id="emailBoard">
-        <a href="mailto:board@chateau-dijon.com">Click Here To Email the Board</a>
-      </div>
+			<div id="emailBoard">
+				<a href="mailto:board@chateau-dijon.com"
+					>Click Here To Email the Board</a
+				>
+			</div>
 
 			<!-- Footer -->
 			<footer class="my-md-5 pt-md-5 border-top">
@@ -244,137 +247,3 @@
 		<script src="js/index.js"></script>
 	</body>
 </html>
-
-<!-- Carousel -->
-<!-- <div class="carousel-inner">
-						<div class="carousel-item w-100 active">
-							<img
-								class="d-block w-100"
-								src="./img/Laura Schneider_Board President.jpg"
-								alt="First slide"
-                />
-							<div class="carousel-caption d-none d-md-block">
-								<div class="board-name-bg">
-									<h4>Laura Schneider</h4>
-									<p>President</p>
-								</div>
-							</div>
-						</div>
-
-						<div class="carousel-item w-100">
-							<img
-								class="d-block w-100"
-								src="./img/Dr. Seabrook Jones_Vice President.jpg"
-								alt="First slide"
-                />
-							<div class="carousel-caption d-none d-md-block">
-								<div class="board-name-bg">
-									<h4>Dr. Seabrook Jones</h4>
-									<p>Vice President</p>
-								</div>
-							</div>
-						</div>
-
-						<div class="carousel-item w-100">
-							<img
-								class="d-block w-100"
-								src="./img/Dolores Villarreal_Treasurer.jpg"
-								alt="First slide"
-                />
-							<div class="carousel-caption d-none d-md-block">
-								<div class="board-name-bg">
-									<h4>Dolores Villarreal</h4>
-									<p>Treasurer</p>
-								</div>
-							</div>
-						</div>
-
-						<div class="carousel-item w-100">
-							<img
-								class="d-block w-100"
-								src="./img/Trisha Cowley_Secretary.jpg"
-								alt="First slide"
-                />
-							<div class="carousel-caption d-none d-md-block">
-								<div class="board-name-bg">
-									<h4>Trisha Cowley</h4>
-									<p>Secretary</p>
-								</div>
-							</div>
-						</div>
-
-						<div class="carousel-item w-100">
-							<img
-								class="d-block w-100"
-								src="./img/Joanie Brooks_Member at Large.jpg"
-								alt="First slide"
-                />
-							<div class="carousel-caption d-none d-md-block">
-								<div class="board-name-bg">
-									<h4>Joanie Brooks</h4>
-									<p>Member At Large</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<a
-						class="carousel-control-prev"
-						href="#carouselExampleIndicators"
-						role="button"
-						data-slide="prev"
-					>
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a
-						class="carousel-control-next"
-						href="#carouselExampleIndicators"
-						role="button"
-						data-slide="next"
-					>
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
-				</div>
-			</div> -->
-
-<!-- <div class="d-flex justify-content-center">
-				<div class="row">
-					<div class="col members">
-						<h4>
-							<span>
-								<img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
-							</span>
-							Laura Schneider, President
-						</h4>
-
-						<h4>
-							<span>
-								<img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
-							</span>
-							Ramiro DeLeon, Vice President
-						</h4>
-
-						<h4>
-							<span>
-								<img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
-							</span>
-							Dolores Villarreal, Treasurer
-						</h4>
-
-						<h4>
-							<span>
-								<img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
-							</span>
-							Joanie Brooks, Secretary
-						</h4>
-
-						<h4>
-							<span>
-								<img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
-							</span>
-							Diane Parma, Member At Large
-						</h4>
-					</div>
-				</div>
-			</div> -->
