--- a/website_files/governing-documents.html
+++ b/website_files/governing-documents.html
@@ -59,6 +59,7 @@
 					<li><a href="contractor.html">Contractors</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
 					<li><a href="media.html">Media</a></li>
+          <li><a href="newsletters.html">Newsletters</a></li>
 				</nav>
 			</div>
 
