Update: hoa.html with new links and remove older ones

--- a/website_files/media/move-in-out-info.html
+++ b/website_files/media/move-in-out-info.html
@@ -38,9 +38,9 @@
 		/>
 
 		<!-- Custom Stylesheets -->
-		<link rel="stylesheet" href="styles.css" />
+		<link rel="stylesheet" href="../styles.css" />
 
-		<title>Chateau Dijon Work Order Flyer</title>
+		<title>Welcome to Chateau Dijon</title>
 	</head>
 
 	<body>
@@ -90,10 +90,10 @@
 		</section>
 
 		<div class="youtube pdf">
-			<h1 class="my-2 videoTitle">About  Chateau Dijon Townhomes</h1>
+			<h1 class="my-2 videoTitle">Move In/out Information</h1>
 
 			<iframe
-				src="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/chateau-dijon-media//Chateau%20Flyer.pdf"
+				src="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/chateau-dijon-media//Welcome%20to%20Chateau%20Dijon.pdf"
 				style="width: 80%; height: 100%; border: none"
 			></iframe>
 		</div>
