--- a/website_files/media/welcome-chateau-dijon.html
+++ b/website_files/media/welcome-chateau-dijon.html
@@ -38,9 +38,9 @@
 		/>
 
 		<!-- Custom Stylesheets -->
-		<link rel="stylesheet" href="styles.css" />
+		<link rel="stylesheet" href="../styles.css" />
 
-		<title>Owners Portal</title>
+		<title>Welcome to Chateau Dijon</title>
 	</head>
 
 	<body>
@@ -59,7 +59,7 @@
 					<li><a href="contractor.html">Contractors</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
 					<li><a href="media.html">Media</a></li>
-					<li><a href="newsletters.html">Newsletters</a></li>
+          <li><a href="newsletters.html">Newsletters</a></li>
 				</nav>
 			</div>
 
@@ -89,127 +89,66 @@
 			</div>
 		</section>
 
-		<div class="mainBody">
-			<div class="pageTitle">
-				<h1>Owners Portal</h1>
-			</div>
+		<div class="youtube pdf">
+			<h1 class="my-2 videoTitle">Welcome to Chateau Dijon</h1>
 
-			<div class="text-left mt-3 d-flex justify-content-center">
-				<ul class="hoaList owners">
-					<li>
-						<a href="/media/chateau-dijon-flyer.html" target="_blank">
-							<h4>
-								<span>
-									<img src="img/fleur-de-lis-stencil.png" alt="" />
-								</span>
-								About Chateau Dijon
-							</h4>
-						</a>
-					</li>
-
-          <li>
-						<a
-							href="/media/move-in-out-info.html"
-							target="_blank"
-						>
-							<h4>
-								<span>
-									<img src="img/fleur-de-lis-stencil.png" alt="" />
-								</span>
-								Move In/Out Information
-							</h4>
-						</a>
-					</li>
-
-					<li>
-						<a href="governing-documents.html">
-							<h4>
-								<span>
-									<img src="img/fleur-de-lis-stencil.png" alt="" />
-								</span>
-								Governing Documents
-							</h4>
-						</a>
-					</li>
-
-          <li>
-						<a
-							href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/Application%20Alteration%20Form.pdf?t=2023-03-21T16%3A42%3A58.419Z"
-							target="_blank"
-						>
-							<h4>
-								<span>
-									<img src="img/fleur-de-lis-stencil.png" alt="" />
-								</span>
-								Application for alteration of Unit
-							</h4>
-						</a>
-					</li>
-
-					<li>
-						<a href="work-order.html">
-							<h4>
-								<span>
-									<img src="img/fleur-de-lis-stencil.png" alt="" />
-								</span>
-								Place A Work Order
-							</h4>
-						</a>
-					</li>
-				</ul>
-			</div>
-			<!-- Footer -->
-			<footer class="my-md-5 pt-md-5 border-top">
-				<div class="row mb-5 d-flex mt-2">
-					<div class="col-12 col-md">
-						<h2>Chateau Dijon Townhomes</h2>
-					</div>
-					<div class="col-6 col-md">
-						<h4>Contact</h4>
-						<div>
-							<p class="text-muted">7711 Broadway Ste B22</p>
-							<p class="text-muted">San Antonio, TX 78209</p>
-							<p class="text-muted">Phone: (210) 824-6308</p>
-						</div>
-						<div>
-							<p class="text-muted d-flex justify-content-start" id="hours">
-								Office Hours:
-							</p>
-							<div class="col d-flex text-left">
-								<ul class="list-unstyled text-muted">
-									<li>Mon -Fri 8AM–4PM</li>
-									<li>Sat & Sun Closed</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="col-6 col-md">
-						<h4>Resources</h4>
-						<ul class="list-unstyled text-small">
-							<li><a class="text-muted" href="hoa.html">Owners Portal</a></li>
-							<li>
-								<a class="text-muted" href="contractor.html">Contractor</a>
-							</li>
-							<li><a class="text-muted" href="media.html">Media</a></li>
-						</ul>
-					</div>
-					<div class="col-6 col-md">
-						<h4>About</h4>
-						<ul class="list-unstyled text-small">
-							<li><a class="text-muted" href="location.html">Location</a></li>
-							<li><a class="text-muted" href="staff.html">Staff</a></li>
-							<li><a class="text-muted" href="board.html">Board Members</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="powered-by text-center pt-5">
-					<small>
-						&copy;2022 Chateau Dijon TownHomes - San Antonio, TX | Powered by
-						<a href="http://rockdigital.agency" target="_blank">Rock Digital</a>
-					</small>
-				</div>
-			</footer>
+			<iframe
+				src="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/chateau-dijon-media//Chateau%20Flyer.pdf"
+				style="width: 80%; height: 100%; border: none"
+			></iframe>
 		</div>
+
+		<!-- Footer -->
+		<footer class="my-md-5 pt-md-5 border-top">
+			<div class="row mb-5 d-flex mt-2">
+				<div class="col-12 col-md">
+					<h2>Chateau Dijon Townhomes</h2>
+				</div>
+				<div class="col-6 col-md">
+					<h4>Contact</h4>
+					<div>
+						<p class="text-muted">7711 Broadway Ste B22</p>
+						<p class="text-muted">San Antonio, TX 78209</p>
+						<p class="text-muted">Phone: (210) 824-6308</p>
+					</div>
+					<div>
+						<p class="text-muted d-flex justify-content-start" id="hours">
+							Office Hours:
+						</p>
+						<div class="col d-flex text-left">
+							<ul class="list-unstyled text-muted">
+								<li>Mon -Fri 8AM–4PM</li>
+								<li>Sat & Sun Closed</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="col-6 col-md">
+					<h4>Resources</h4>
+					<ul class="list-unstyled text-small">
+						<li><a class="text-muted" href="hoa.html">Owners Portal</a></li>
+						<li>
+							<a class="text-muted" href="contractor.html">Contractor</a>
+						</li>
+						<li><a class="text-muted" href="media.html">Media</a></li>
+					</ul>
+				</div>
+				<div class="col-6 col-md">
+					<h4>About</h4>
+					<ul class="list-unstyled text-small">
+						<li><a class="text-muted" href="location.html">Location</a></li>
+						<li><a class="text-muted" href="staff.html">Staff</a></li>
+						<li><a class="text-muted" href="board.html">Board Members</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="powered-by text-center pt-5">
+				<small>
+					&copy;2022 Chateau Dijon TownHomes - San Antonio, TX | Powered by
+					<a href="http://rockdigital.agency" target="_blank">Rock Digital</a>
+				</small>
+			</div>
+		</footer>
 
 		<!-- Bootstrap JavaScript CDNs -->
 
