--- a/website_files/2024Year-in-Review.html
+++ b/website_files/2024Year-in-Review.html
@@ -59,7 +59,7 @@
 					<li><a href="contractor.html">Contractors</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
 					<li><a href="media.html">Media</a></li>
-          <li><a href="newsletters.html">Newsletters</a></li>
+					<li><a href="newsletters.html">Newsletters</a></li>
 				</nav>
 			</div>
 
@@ -92,10 +92,15 @@
 		<div class="youtube pdf">
 			<h1 class="my-2 videoTitle">2024 Year in Review</h1>
 
-			<iframe
-				src="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/chateau-dijon-media//Chateau%20Dijon.pdf"
-				style="width: 80%; height: 100%; border: 4px solid green"
-			></iframe>
+			<div class="pdf-container">
+				<iframe
+					class="YIR2024-iframe"
+					src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https%3A%2F%2Fysbcqlvjjynjtodjayka.supabase.co%2Fstorage%2Fv1%2Fobject%2Fpublic%2Fchateau-dijon-media%2F%2FChateau%2520Dijon.pdf#zoom=page-width"
+					title="2024 Year in Review PDF"
+					style="width: 100%; height: 100%; border: 0; display: block"
+					allowfullscreen
+				></iframe>
+			</div>
 		</div>
 
 		<!-- Footer -->
