--- a/website_files/2025Year-in-Review.html
+++ b/website_files/2025Year-in-Review.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -39,9 +39,8 @@
 
 		<!-- Custom Stylesheets -->
 		<link rel="stylesheet" href="styles.css" />
-		<link rel="stylesheet" href="/styles/board.css" />
 
-		<title>Property Staff</title>
+		<title>2025 Year in Review</title>
 	</head>
 
 	<body>
@@ -90,67 +89,21 @@
 			</div>
 		</section>
 
-		<div class="pageTitle">
-			<h1>Property Staff</h1>
-		</div>
-
-		<div class="d-flex justify-content-center my-5 staff-image-container">
-			<!-- <img
-				class="img img-fluid"
-				src="./img/Staff_Update_11042024.jpg"
-				alt="Chateau Dijon Property Staff Picture"
-			/> -->
-		</div>
-
-		<div class="d-flex justify-content-center pb-5 mainBody">
-			<div class="row">
-				<div class="col members">
-					<h4>
-						<span>
-							<img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
-						</span>
-						Simon​​e Perry - <span>Association Manager</span>
-					</h4>
-
-					<h4>
-						<span>
-							<img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
-						</span>
-						Natalie Salazar - Administrative Assistant/ Bookeeper
-					</h4>
-
-					<h4>
-						<span>
-							<img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
-						</span>
-						Margie Ochoa - Housekeeping
-					</h4>
-
-					<!-- <h4>
-						<span>
-							<img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
-						</span>
-						Juan Alejandro - Maintenance Superintendent
-					</h4> -->
-
-					<h4>
-						<span>
-							<img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
-						</span>
-						Jorge Gonzalez - Maintenance
-					</h4>
-
-					<h4>
-						<span>
-							<img src="img/fleur-de-lis-stencil.png" alt="fleur de lis" />
-						</span>
-						Joel StPierre - Landscaping
-					</h4>
+		<div class="youtube">
+			<h1 class="my-2 videoTitle">2025 Year in Review</h1>
+			<div class="auto-resize">
+				<div>
+					<iframe
+						src="https://docs.google.com/presentation/d/e/2PACX-1vT3Rf16y-SCFNnccHo4wxCUzK7ZtnwEOUSqI59XmwmH-5QHRlqSPJ7ti3X7F0jsPQ/pubembed?start=true&loop=false&delayms=5000"
+						frameborder="0"
+						width="1280"
+						height="749"
+						allowfullscreen="true"
+						mozallowfullscreen="true"
+						webkitallowfullscreen="true"
+					></iframe>
 				</div>
 			</div>
-		</div>
-		<div id="emailBoard">
-			<a href="mailto:propertymanager@chateau-dijon.com" target="_blank">Click Here To Email the Manager</a>
 		</div>
 
 		<!-- Footer -->
