--- a/website_files/board.html
+++ b/website_files/board.html
@@ -98,26 +98,26 @@
 				<div class="container">
 					<!-- First row with 2 members -->
 					<div class="row mb-4">
-						<div class="col-lg-6 member text-center">
+						<div class="col-lg-5 member text-center">
 							<img
-								class="d-block mx-auto w-100 pres"
-								src="./img/Laura Schneider_Board President.jpg"
-								alt="Laura Schneider - Board President"
+								class="d-block mx-auto w-100"
+								src="./img/Dr. Seabrook Jones_Vice President.jpg"
+								alt="Dr. Seabrook Jones - President"
 							/>
 							<div class="board-name-bg mt-2">
-								<h4>Laura Schneider</h4>
+								<h4>Dr. Seabrook Jones</h4>
 								<p>President</p>
 							</div>
 						</div>
 
-						<div class="col-lg-6 member text-center">
+						<div class="col-lg-5 member text-center">
 							<img
 								class="d-block mx-auto w-100"
-								src="./img/Dr. Seabrook Jones_Vice President.jpg"
-								alt="Dr. Seabrook Jones - Vice President"
+								src="./img/Kathleen Kramer.jpg"
+								alt="Kathleen Kramer - Vice President"
 							/>
 							<div class="board-name-bg mt-2">
-								<h4>Dr. Seabrook Jones</h4>
+								<h4>Kathleen Kramer</h4>
 								<p>Vice President</p>
 							</div>
 						</div>
@@ -128,11 +128,11 @@
 						<div class="col-lg-4 member text-center">
 							<img
 								class="d-block mx-auto w-100"
-								src="./img/Dolores Villarreal_Treasurer.jpg"
-								alt="Dolores Villarreal - Treasurer"
+								src="./img/christie_downs_treasurer copy.png"
+								alt="Christie Downs - Treasurer"
 							/>
 							<div class="board-name-bg mt-2">
-								<h4>Dolores Villarreal</h4>
+								<h4>Dr. Christie Downs</h4>
 								<p>Treasurer</p>
 							</div>
 						</div>
@@ -152,11 +152,11 @@
 						<div class="col-lg-4 member text-center">
 							<img
 								class="d-block mx-auto w-100"
-								src="./img/Kathleen Kramer.jpg"
-								alt="Kathleen Kramer - Member at Large"
+								src="./img/default-profile-placeholder.png"
+								alt="Steve Atkins - Member at Large"
 							/>
 							<div class="board-name-bg mt-2">
-								<h4>Kathleen Kramer</h4>
+								<h4>Steve Atkins</h4>
 								<p>Member At Large</p>
 							</div>
 						</div>
@@ -164,7 +164,7 @@
 				</div>
 			</div>
 			<div id="emailBoard">
-				<a href="mailto:board@chateau-dijon.com"
+				<a href="mailto:board@chateau-dijon.com" target="_blank"
 					>Click Here To Email the Board</a
 				>
 			</div>
