--- a/website_files/governing-documents.html
+++ b/website_files/governing-documents.html
@@ -98,7 +98,7 @@
 				<ul class="hoaList">
 					<li>
 						<a
-							href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/Amended%20%20Restated%20Rules%20and%20Regulations%20for%20Chateau%20Dijon(18779024.1%20SJDOCS).pdf?t=2024-01-26T18%3A12%3A05.700Z"
+							href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/2025-10-22%20Amended%20and%20Restated%20Rules%20and%20Regulations%2020250197124(27412300.1%20SJDOCS).pdf"
 							target="_blank"
 						>
 							<h4>
@@ -122,19 +122,7 @@
 							</h4>
 						</a>
 					</li>
-					<li>
-						<a
-							href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/2019-11-25%20Rules%20and%20Regulations-Patios%20Balconies%20Terraces%20(Filed).pdf?t=2023-03-21T02%3A07%3A53.874Z"
-							target="_blank"
-						>
-							<h4>
-								<span>
-									<img src="img/fleur-de-lis-stencil.png" alt="" />
-								</span>
-								Balconies, Patios, and Terraces
-							</h4>
-						</a>
-					</li>
+					
 					<li>
 						<a
 							href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/1979%20Recorded%20Declaration.pdf?t=2023-03-21T02%3A32%3A08.533Z"
@@ -145,86 +133,6 @@
 									<img src="img/fleur-de-lis-stencil.png" alt="" />
 								</span>
 								Declaration of Covenants, Restrictions, and Conditions
-							</h4>
-						</a>
-					</li>
-					<li>
-						<a
-							href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/2020-01-16%20Fireplace%20Policy%20(Filed).pdf?t=2023-03-21T02%3A30%3A48.004Z"
-							target="_blank"
-						>
-							<h4>
-								<span>
-									<img src="img/fleur-de-lis-stencil.png" alt="" />
-								</span>
-								Fireplace Policy
-							</h4>
-						</a>
-					</li>
-					<li>
-						<a
-							href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/Notarized%20and%20Filed%20Open%20Records%20Policy_10.9.23.pdf?t=2023-10-27T16%3A28%3A21.916Z"
-							target="_blank"
-						>
-							<h4>
-								<span>
-									<img src="img/fleur-de-lis-stencil.png" alt="" />
-								</span>
-								Open Records Policy
-							</h4>
-						</a>
-					</li>
-
-					<li>
-						<a
-							href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/Balcony%20%20Patio%20Awnings%20%20Roll%20Down%20Shade%20Screen%20Resolution(23506827.1%20SJDOCS).pdf"
-							target="_blank"
-						>
-							<h4>
-								<span>
-									<img src="img/fleur-de-lis-stencil.png" alt="" />
-								</span>
-								Balcony, Patio Awnings & Roll Down Shade Resolution
-							</h4>
-						</a>
-					</li>
-
-					<li>
-						<a
-							href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/2021-09-13%20Pandemic_Policy_(Filed).pdf"
-							target="_blank"
-						>
-							<h4>
-								<span>
-									<img src="img/fleur-de-lis-stencil.png" alt="" />
-								</span>
-								Pandemic Policy
-							</h4>
-						</a>
-					</li>
-					<li>
-						<a
-							href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/2021-09-13%20Religious_Item_Policy_(Filed).pdf?t=2023-03-21T02%3A24%3A46.078Z"
-							target="_blank"
-						>
-							<h4>
-								<span>
-									<img src="img/fleur-de-lis-stencil.png" alt="" />
-								</span>
-								Religious Display Policy
-							</h4>
-						</a>
-					</li>
-					<li>
-						<a
-							href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/2021-12-13%20Notice%20of%20Filing%20-%20Dog%20Run%20%20Utility%20Line%20Policies%20(Filed).pdf"
-							target="_blank"
-						>
-							<h4>
-								<span>
-									<img src="img/fleur-de-lis-stencil.png" alt="" />
-								</span>
-								Dog Run & Utility Line Policies
 							</h4>
 						</a>
 					</li>
@@ -245,7 +153,7 @@
 
 					<li>
 						<a
-							href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/Chateau%20Dijon%20Management%20Certificate(19227196.1%20SJDOCS).pdf?t=2024-03-04T00%3A35%3A52.546Z"
+							href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/2025-11-14%20Management%20Certificate%2020250213551(27569780.1%20SJDOCS).pdf"
 							target="_blank"
 						>
 							<h4>
@@ -259,14 +167,14 @@
           
           <li>
             <a
-              href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/(115558.00001)%20Chateau%20Dijon%20Townhomes%20Owners%20Assn%20-%20Emergency%20Resolution%20re%20Leasing%20of%20Units%20RECORDED%2011.26.2024%20(2).pdf?t=2024-11-26T18%3A02%3A19.971Z"
+              href="https://ysbcqlvjjynjtodjayka.supabase.co/storage/v1/object/public/governing.docs/Registered%20Agent%20CD.pdf"
               target="_blank"
             >
               <h4>
                 <span>
                   <img src="img/fleur-de-lis-stencil.png" alt="" />
                 </span>
-                Leasing of Units Resolution
+                Registered Agent
               </h4>
             </a>
           </li>
