--- a/website_files/hoa.html
+++ b/website_files/hoa.html
@@ -152,7 +152,7 @@
 								<span>
 									<img src="img/fleur-de-lis-stencil.png" alt="" />
 								</span>
-								Place A Work Order
+								Submit A Work Order
 							</h4>
 						</a>
 					</li>
