--- a/website_files/media.html
+++ b/website_files/media.html
@@ -116,6 +116,16 @@
               </h4>
             </a>
           </li>
+          <li>
+            <a href="2025Year-in-Review.html">
+              <h4>
+                <span>
+                  <img src="img/fleur-de-lis-stencil.png" alt="" />
+                </span>
+                2025 Year in Review
+              </h4>
+            </a>
+          </li>
         </ul>
       </div>
 
