--- a/website_files/work-order.html
+++ b/website_files/work-order.html
@@ -1,56 +1,56 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+	<head>
+		<meta charset="utf-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, shrink-to-fit=no"
+		/>
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
+		<!-- Bootstrap CSS -->
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+			integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+			crossorigin="anonymous"
+		/>
 
-    <link
-      href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-      rel="stylesheet"
-      id="bootstrap-css"
-    />
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<link
+			href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+			rel="stylesheet"
+			id="bootstrap-css"
+		/>
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <!-- Font Awesome -->
-    <script
-      src="https://kit.fontawesome.com/d3f8d1b062.js"
-      crossorigin="anonymous"
-    ></script>
+		<!-- Font Awesome -->
+		<script
+			src="https://kit.fontawesome.com/d3f8d1b062.js"
+			crossorigin="anonymous"
+		></script>
 
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Charm&family=Cormorant+SC&family=EB+Garamond&family=Josefin+Slab&family=Montagu+Slab:wght@300&family=Playfair+Display&family=Tangerine:wght@700&display=swap"
-      rel="stylesheet"
-    />
+		<!-- Google Fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Charm&family=Cormorant+SC&family=EB+Garamond&family=Josefin+Slab&family=Montagu+Slab:wght@300&family=Playfair+Display&family=Tangerine:wght@700&display=swap"
+			rel="stylesheet"
+		/>
 
-    <!-- Custom Stylesheets -->
-    <link rel="stylesheet" href="styles.css" />
+		<!-- Custom Stylesheets -->
+		<link rel="stylesheet" href="styles.css" />
 
-    <title>Work Order</title>
-  </head>
+		<title>Work Order</title>
+	</head>
 
-  <body>
-    <header class="header">
-      <h1 class="writtenLogo">
-        <a href="index.html">Chateau Dijon Townhomes</a>
-      </h1>
-      <div class="nav-modal">
-        <div class="menu"></div>
-        <nav>
+	<body>
+		<header class="header">
+			<h1 class="writtenLogo">
+				<a href="index.html">Chateau Dijon Townhomes</a>
+			</h1>
+			<div class="nav-modal">
+				<div class="menu"></div>
+				<nav>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="location.html#top">Location</a></li>
 					<li><a href="hoa.html">Owners Portal</a></li>
@@ -59,151 +59,163 @@
 					<li><a href="contractor.html">Contractors</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
 					<li><a href="media.html">Media</a></li>
-          <li><a href="newsletters.html">Newsletters</a></li>
+					<li><a href="newsletters.html">Newsletters</a></li>
 				</nav>
-      </div>
+			</div>
 
-      <div class="head">
-        <a href="tel:+12108246308" class="tile socialmedia"
-          ><i class="fas fa-phone-square-alt"></i
-        ></a>
-        <a href="location.html#map" class="tile socialmedia"
-          ><i class="fas fa-map-marker-alt"></i
-        ></a>
-        <div class="tile burger">
-          <div class="meat">
-            <div class="line one"></div>
-            <div class="line two"></div>
-            <div class="line three"></div>
-          </div>
-        </div>
-      </div>
-    </header>
+			<div class="head">
+				<a href="tel:+12108246308" class="tile socialmedia"
+					><i class="fas fa-phone-square-alt"></i
+				></a>
+				<a href="location.html#map" class="tile socialmedia"
+					><i class="fas fa-map-marker-alt"></i
+				></a>
+				<div class="tile burger">
+					<div class="meat">
+						<div class="line one"></div>
+						<div class="line two"></div>
+						<div class="line three"></div>
+					</div>
+				</div>
+			</div>
+		</header>
 
-    <section>
-      <h1 class="writtenLogoBelow my-4">
-        <strong>Chateau Dijon Townhomes</strong>
-      </h1>
-      <div class="jumbotron jumbotron-fluid">
-        <div class="container"></div>
-      </div>
-    </section>
+		<section>
+			<h1 class="writtenLogoBelow my-4">
+				<strong>Chateau Dijon Townhomes</strong>
+			</h1>
+			<div class="jumbotron jumbotron-fluid">
+				<div class="container"></div>
+			</div>
+		</section>
 
-    <div class="pageTitle">
-      <h1>Submit A Work Order</h1>
-    </div>
+		<div class="pageTitle">
+			<h1>Submit A Work Order</h1>
+		</div>
 
-    <div class="d-flex flex-column align-items-center bolder">
-      <p>
-        The Association is excited to share our new electronic work order system with you.
-      </p>
-      <p class="bolder"><strong>Starting <span class="underline">November 4, 2024,</span> owners will be able to place work orders online!</strong></p>
-      <p>The work orders are for repairs at your unit at <span class="underline">common areas/responsibilities</span> such as :</p>
-      <ul>
-        <li>screen repair & replacements</li>
-        <li>front door maintenance & repair</li>
-        <li>window maintenance & repair</li>
-        <li>glass sliding door maintenance & repair</li>
-        <li>patio fence maintenance & repair</li>
-        <li>outside siding maintenance & repair</li>
-      </ul>
-      <br />
-      <p id="contactBlurb">
-        <span class="underline">***Please continue to contact Maintenance directly at 210-464-5434 if you have an active leak! <br />
-        We will be able to react quickly and avoid possible damage to your unit and other areas.***</span>
-      </p>
-      <br />
-      <p>Here's how to place a work order online:</p>
-      <ol class="d-flex flex-column align-items-center">
-        <li>Click the yellow "Submit a Work Order" button below.</li>
-        <li>Fill out the required fields and submit the form.</li>
-        <li>We will notify you when the work order was accepted and completed.</li>
-      </ol>
-    </div>
-    
+		<div class="d-flex flex-column align-items-center bolder">
+			<p>
+				The Association is excited to share our new electronic work order system
+				with you.
+			</p>
+			<br />
+			<p id="contactBlurb">
+				<span class="underline"
+					>***Please continue to contact Maintenance directly at 210-464-5434 if
+					you have an active leak! <br />
+					We will be able to react quickly and avoid possible damage to your
+					unit and other areas.***</span
+				>
+			</p>
+			<br />
 
-    <div class="d-flex justify-content-center py-5">
-      <a
-        href="https://app.clickmaint.com/portal/23ae9c5c-a62b-4ad5-8fe8-1ab95c274547"
-        target="_blank"
-        type="button"
-        class="btn btn-warning btn-lg"
-        >Submit a Work Order</a
-      >
-    </div>
+			<p>
+				The work orders are for repairs at your unit at
+				<span class="underline">common areas/responsibilities</span> such as :
+			</p>
+			<ul>
+				<li>screen repair & replacements</li>
+				<li>front door maintenance & repair</li>
+				<li>window maintenance & repair</li>
+				<li>glass sliding door maintenance & repair</li>
+				<li>patio fence maintenance & repair</li>
+				<li>outside siding maintenance & repair</li>
+			</ul>
+			
+			<br />
+			<div class="d-flex justify-content-center py-5">
+				<a
+					href="https://app.clickmaint.com/portal/23ae9c5c-a62b-4ad5-8fe8-1ab95c274547"
+					target="_blank"
+					type="button"
+					class="btn btn-warning btn-lg"
+					>Submit a Work Order</a
+				>
+			</div>
+			<br />
 
-    <!-- Footer -->
-    <footer class="my-md-5 pt-md-5 border-top">
-      <div class="row mb-5 d-flex mt-2">
-        <div class="col-12 col-md">
-          <h2>Chateau Dijon Townhomes</h2>
-        </div>
-        <div class="col-6 col-md">
-          <h4>Contact</h4>
-          <div>
-            <p class="text-muted">7711 Broadway Ste B22</p>
-            <p class="text-muted">San Antonio, TX 78209</p>
-            <p class="text-muted">Phone: (210) 824-6308</p>
-          </div>
-          <div>
-            <p class="text-muted d-flex justify-content-start" id="hours">
-              Office Hours:
-            </p>
-            <div class="col d-flex text-left">
-              <ul class="list-unstyled text-muted">
-                <li>Mon -Fri 8AM–4PM</li>
-                <li>Sat & Sun Closed</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="col-6 col-md">
-          <h4>Resources</h4>
-          <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="hoa.html">Owners Portal</a></li>
-            <li><a class="text-muted" href="contractor.html">Contractor</a></li>
-            <li><a class="text-muted" href="media.html">Media</a></li>
-          </ul>
-        </div>
-        <div class="col-6 col-md">
-          <h4>About</h4>
-          <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="location.html">Location</a></li>
-            <li><a class="text-muted" href="staff.html">Staff</a></li>
-            <li><a class="text-muted" href="board.html">Board Members</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="powered-by text-center pt-5">
-        <small>
-          &copy;2022 Chateau Dijon TownHomes - San Antonio, TX | Powered by
-          <a href="http://rockdigital.agency" target="_blank">Rock Digital</a>
-        </small>
-      </div>
-    </footer>
+			<p>Here's how to place a work order online:</p>
+			<ol class="d-flex flex-column align-items-center">
+				<li>Click the yellow "Submit a Work Order" button.</li>
+				<li>Fill out the required fields and submit the form.</li>
+				<li>
+					We will notify you when the work order was accepted and completed.
+				</li>
+			</ol>
+		</div>
 
-    <!-- Bootstrap JavaScript CDNs -->
+		<!-- Footer -->
+		<footer class="my-md-5 pt-md-5 border-top">
+			<div class="row mb-5 d-flex mt-2">
+				<div class="col-12 col-md">
+					<h2>Chateau Dijon Townhomes</h2>
+				</div>
+				<div class="col-6 col-md">
+					<h4>Contact</h4>
+					<div>
+						<p class="text-muted">7711 Broadway Ste B22</p>
+						<p class="text-muted">San Antonio, TX 78209</p>
+						<p class="text-muted">Phone: (210) 824-6308</p>
+					</div>
+					<div>
+						<p class="text-muted d-flex justify-content-start" id="hours">
+							Office Hours:
+						</p>
+						<div class="col d-flex text-left">
+							<ul class="list-unstyled text-muted">
+								<li>Mon -Fri 8AM–4PM</li>
+								<li>Sat & Sun Closed</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="col-6 col-md">
+					<h4>Resources</h4>
+					<ul class="list-unstyled text-small">
+						<li><a class="text-muted" href="hoa.html">Owners Portal</a></li>
+						<li><a class="text-muted" href="contractor.html">Contractor</a></li>
+						<li><a class="text-muted" href="media.html">Media</a></li>
+					</ul>
+				</div>
+				<div class="col-6 col-md">
+					<h4>About</h4>
+					<ul class="list-unstyled text-small">
+						<li><a class="text-muted" href="location.html">Location</a></li>
+						<li><a class="text-muted" href="staff.html">Staff</a></li>
+						<li><a class="text-muted" href="board.html">Board Members</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="powered-by text-center pt-5">
+				<small>
+					&copy;2022 Chateau Dijon TownHomes - San Antonio, TX | Powered by
+					<a href="http://rockdigital.agency" target="_blank">Rock Digital</a>
+				</small>
+			</div>
+		</footer>
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-      crossorigin="anonymous"
-    ></script>
-    <!-- jQuery CDN -->
-    <script
-      src="https://code.jquery.com/jquery-3.6.0.js"
-      integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-      crossorigin="anonymous"
-    ></script>
+		<!-- Bootstrap JavaScript CDNs -->
 
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script
+			src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+			integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+			crossorigin="anonymous"
+		></script>
+		<!-- jQuery CDN -->
+		<script
+			src="https://code.jquery.com/jquery-3.6.0.js"
+			integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+			crossorigin="anonymous"
+		></script>
 
-    <!-- Custom JS -->
-    <script src="js/index.js"></script>
-  </body>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+		<!-- Custom JS -->
+		<script src="js/index.js"></script>
+	</body>
 </html>
